# AutoThreads

./: .gitignore  README.md  pyproject.toml
notebook/: prompt.ipynb
threads/: __init__.py  chain.py  flux.py  img_transform.py  main.py  serapi.py  threads.py
threads/prefect/: dailyflow.py
threads/prompt/: system_prompt.yaml
threads/utils/: __init__.py  utils.py
