[tool.poetry]
name = "automate-threads"
version = "0.1.0"
description = "testing job"
authors = ["Nico <zidnae852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prefect = "*"
langchain = "*"
google-search-results = "*"
langchain-openai = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
